log/build_2020-07-18_14-51-36/py_turtlebot3_gazebo/stderr.log
  File "/home/haruki/my_turtlebot3_ws/install/py_turtlebot3_gazebo/lib/python3.8/site-packages/py_turtlebot3_gazebo/py_turtlebot3_drive.py", line 23
    scan_data =
               ^
SyntaxError: invalid syntax

